# dowserC

./: .gitignore  .golangci.yaml  .goreleaser.yaml  README.md  Taskfile.yaml  art.txt  go.mod  go.sum  main.go  main.py  pyproject.toml
.github/: dependabot.yml
.github/workflows/: build.yml  codeql.yml  lint.yml  release.yml
cmd/: root.go
cmd/dowserC/: main.go
pkg/launcher/: dotmodfile.go  dowser.go  path.go  settings.go
pkg/mod/: marshal.go  unmarshal.go
