[tool.poetry]
name = "dowserC"
version = "1.0.0"
description = "根据游戏根目录下的mod文件夹自动生成mod定位文件"
authors = ["Arama <arama.dev@outlook.com>"]
license = "GPL-3.0"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"


[[tool.poetry.source]]
name = "mirrors"
url = "https://pypi.tuna.tsinghua.edu.cn/simple/"
priority = "primary"


[tool.poetry.group.dev.dependencies]
ruff = "^0.6.2"
nuitka = "^2.4.7"

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "W", "F", "N", "I", "UP", "PL", "PERF", "RUF"]
fixable = ["ALL"]

[tool.ruff.format]
quote-style = "single"
indent-style = "space"
docstring-code-format = true

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
